--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,10 +18,24 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'pnpm'
+    
+    - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          run_install: false
 
-    - name: Install pnpm
-      run: npm install -g pnpm
+    - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
 
     - name: Install Dependencies
       run: pnpm install
