--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,13 +44,13 @@ jobs:
     - name: Determine Affected Projects
       id: affected
       run: |
-        echo "::set-output name=build::$(pnpm nx affected:build --base=origin/main --head=HEAD --plain)"
-        echo "::set-output name=test::$(pnpm nx affected:test --base=origin/main --head=HEAD --plain)"
+        echo "::set-output name=build::$(pnpm nx affected:build --base=origin/main --head=HEAD --plain --all)"
+        echo "::set-output name=test::$(pnpm nx affected:test --base=origin/main --head=HEAD --plain --all)"
 
     - name: Build Affected Projects
       if: steps.affected.outputs.build != ''
-      run: pnpm nx affected:build --base=origin/main --head=HEAD
+      run: pnpm nx affected:build --base=origin/main --head=HEAD --all
 
     - name: Test Affected Projects
       if: steps.affected.outputs.test != ''
-      run: pnpm nx affected:test --base=origin/main --head=HEAD
+      run: pnpm nx affected:test --base=origin/main --head=HEAD --all
