--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,4 +45,4 @@ jobs:
       run: pnpm nx affected -t test --base=main --head=HEAD
     
     - name: Test Affected Projects Last Commit
-      run: pnpm nx affected -t test --base=main~1 --head=HEAD
+      run: pnpm nx affected -t test --base=main --head=HEAD~1
