--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,4 +47,4 @@ jobs:
     
     - name: Test Affected Projects Last Commit
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: pnpm nx affected -t test --base=main~1 --head=HEAD
+      run: pnpm nx affected -t test --base=main~1 --head=main
